--- a/config/compose.yml
+++ b/config/compose.yml
@@ -5,8 +5,10 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./../frontend/dist:/usr/share/nginx/html:ro
+      - /etc/letsencrypt/live/triada-kungfu.ru/:/etc/letsencrypt/live/triada-kungfu.ru/:ro
     ports:
       - "80:80"
+      - "443:443"
     networks:
       - local_network
 #  gateway:
