--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,19 +1,30 @@
-events {
+events {}
 
-}
 http {
     server {
         listen 80;
-        #location /api/ {
-        #    proxy_pass http://gateway:8000;
-        #    proxy_set_header Host $host;
-        #    proxy_set_header X-Real-IP $remote_addr;
-        #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #    proxy_set_header X-Forwarded-Proto $scheme;
-        #}
+        server_name triada-kungfu.ru www.triada-kungfu.ru;
+
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name triada-kungfu.ru www.triada-kungfu.ru;
+
+        ssl_certificate     /etc/letsencrypt/live/triada-kungfu.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/triada-kungfu.ru/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        root /usr/share/nginx/html;
+        index index.html;
+
+        charset utf-8;
+
         location / {
-            root /usr/share/nginx/html;
-            try_files $uri $uri/ =404;
+            try_files $uri $uri/ /index.html;
         }
     }
 }
