--- a/config/compose.yml
+++ b/config/compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   nginx:
     image: nginx:latest
+    name: "nginx"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./../frontend/dist:/usr/share/nginx/html:ro
@@ -20,3 +21,4 @@ services:
 networks:
   local_network:
     driver: bridge
+  restart: always
