--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -12,8 +12,8 @@ http {
         listen 443 ssl;
         server_name triada-kungfu.ru www.triada-kungfu.ru;
 
-        ssl_certificate     /etc/letsencrypt/live/triada-kungfu.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/triada-kungfu.ru/privkey.pem;
+        ssl_certificate     /etc/letsencrypt/archive/triada-kungfu.ru/fullchain1.pem;
+        ssl_certificate_key /etc/letsencrypt/archive/triada-kungfu.ru/privkey1.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
