--- a/config/compose.yml
+++ b/config/compose.yml
@@ -6,6 +6,7 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./../frontend/dist:/usr/share/nginx/html:ro
       - /etc/letsencrypt/live/triada-kungfu.ru/:/etc/letsencrypt/live/triada-kungfu.ru/:ro
+      - /etc/letsencrypt/archive/triada-kungfu.ru/:/etc/letsencrypt/archive/triada-kungfu.ru/:ro
     ports:
       - "80:80"
       - "443:443"
