--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -11,6 +11,8 @@ http {
     server {
         listen 443 ssl;
         server_name triada-kungfu.ru www.triada-kungfu.ru;
+        add_header Set-Cookie "cookieon=value; SameSite=None; Secure; Path=/; HttpOnly" always;
+        add_header Content-Security-Policy "script-src 'self' 'nonce-<random_nonce>';" always;
 
         ssl_certificate     /etc/letsencrypt/archive/triada-kungfu.ru/fullchain1.pem;
         ssl_certificate_key /etc/letsencrypt/archive/triada-kungfu.ru/privkey1.pem;
